# deepnash-rbc

./: .gitattributes  .gitignore  ALGORITHM.md  LICENSE  README.md  pyproject.toml
checkpoints/v0.2.0/: config.json  deepnash_async_v0.2.0_100000.pt  deepnash_async_v0.2.0_1000000.pt
checkpoints/v0.3.0/: config.json
checkpoints/v0.4.0/: config.json
checkpoints/v0.5.0/: config.json
checkpoints/v0.6.0/: config.json
checkpoints/v0.7.0/: config.json
notebooks/: clean_legacy_metrics.py  metrics_explore.py  metrics_to_tensorboard.py
results/: deepnash-rbc_v0.2.0_results.txt  deepnash-rbc_v0.3.0_results.txt  deepnash-rbc_v0.4.0_results.txt  deepnash-rbc_v0.5.0_results.txt  deepnash-rbc_v0.6.0_results.txt  deepnash-rbc_v0.7.0_results.txt  deepnash-rbc_v0.7.1_results.txt
scripts/: train_campaign.py
src/deepnash_rbc/: agent.py  async_train.py  bench.py  checkpoints.py  cli.py  config.py  eval.py  metrics.py  network.py  play.html  play_server.py  play_session.py  replay.py  schedule.py  selfplay.py  smoke_test.py  stockfish_eval.py  train.py  version.py
src/deepnash_rbc/analysis/: __init__.py  belief.py  engine.py  ladder.py  move_quality.py
src/deepnash_rbc/encoding/: moves.py  observation.py
src/deepnash_rbc/rnad/: neurd.py  trainer.py  transform.py  vtrace.py
tests/: test_cli_overrides.py  test_learner_equivalence.py  test_neurd.py  test_schedule.py  test_versioning.py
tools/: sweep_curve.py  verify_color.py
tools/stockfish/: stockfish-ubuntu-x86-64-bmi2
