[project]
name = "deepnash-rbc"
version = "0.2.0"
description = "A model-free R-NaD (DeepNash-style) self-play agent for Reconnaissance Blind Chess (RBC)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "reconchess>=1.6.9",
    "torch>=2.2",
    "numpy>=1.24",
]

[project.optional-dependencies]
ui = [
  "flask>=3.0"
]

[dependency-groups]
dev = [
  "pytest>=8.0"
]

[project.scripts]
deepnash-train = "deepnash_rbc.train:main"
deepnash-train-async = "deepnash_rbc.async_train:main"
deepnash-bench = "deepnash_rbc.bench:main"
deepnash-smoke = "deepnash_rbc.smoke_test:main"
deepnash-play = "deepnash_rbc.play_server:main"
deepnash-stockfish-eval = "deepnash_rbc.stockfish_eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepnash_rbc"]

[tool.hatch.build.targets.wheel.force-include]
"src/deepnash_rbc/play.html" = "deepnash_rbc/play.html"

